--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
   font-family: Poppins;
 }
 
+.container {
+  margin: 0 300px;
+}
+
 .weather-app {
   max-width: 800px;
   margin: 20px 0 auto;
@@ -24,7 +28,7 @@ li {
   list-style: none;
   margin: 0;
   padding: 0;
-  color: #878787;
+  color: #5e5e5e;
   font-size: 16px;
   font-weight: 200;
   line-height: 19px;
@@ -41,7 +45,7 @@ li:first-letter {
 }
 
 .weather-temperature strong {
-  color: black;
+  color: #181c14;
   font-size: 64px;
   line-height: 1;
   font-weight: 400;
@@ -56,24 +60,22 @@ li:first-letter {
 .weather-forecast {
   margin-top: 50px 0 0 -10px;
   text-align: center;
-  color: #878787;
+  color: #5e5e5e;
   font-weight: 200;
 }
 
-.weather-forecast-date {
-  font-size: 16px;
+.day-of-week {
+  font-weight: 600;
+  color: #181c14;
 }
 
-.weather-forecast-temperature-min {
-  opacity: 0.7;
-}
-
-.weather-forecast-temperatures {
-  font-size: 13px;
+.min-max-container {
+  margin: 0 70px;
+  color: #181c14;
 }
 
 #current-city {
-  color: #878787;
+  color: #181c14;
   margin-left: 20px;
   text-transform: capitalize;
 }
