--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ li {
   color: var(--secondary-color);
   font-size: 16px;
   font-weight: 400;
-  line-height: 19px;
+  line-height: 1.5;
 }
 
 li:first-letter {
@@ -119,7 +119,7 @@ ul li:first-child {
   align-items: center;
   justify-content: center;
   padding-bottom: 20px;
-  margin-top: -30px;
+  margin-top: -10px;
 }
 
 @media (max-width: 768px) {
@@ -147,5 +147,9 @@ ul li:first-child {
 
   .weather-forecast .col {
     margin-bottom: 30px;
+  }
+
+  .signature {
+    margin-top: 30px;
   }
 }
